--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
-title:            Site Title
-description:      Describe your website here.
+title:            Delon Group
+#description:      Describe your website here.
 disqus_shortname: 
 #Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://delongroup.github.io
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Delon Group
   avatar:         avatar.jpg
   bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
-  email:          you@email.com
+  email:          derlongroup@126.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
   facebook:       
@@ -41,7 +41,7 @@ bing_verify:
 #     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    Asia/Chongqing
 future:      true
 pygments:    true
 markdown:    kramdown
