--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ url:              http://delongroup.github.io
 # Owner/author information
 owner:
   name:           Delon Group
-  avatar:         avatar.jpg
-  bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
+  #avatar:         avatar.jpg
+  #bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
   email:          derlongroup@126.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
