--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ bing_verify:
 timezone:    Asia/Chongqing
 future:      true
 pygments:    true
-markdown:    kramdown
+markdown:    redcarpet
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink:   /:categories/:title/
