--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,9 @@ permalink:   /:categories/:title/
 # Amount of post to show on home page
 paginate: 5
 
+redcarpet:
+    extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "tables", "highlight", "prettify"]
+    
 kramdown:
   auto_ids: true
   footnote_nr: 1
