--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ bing_verify:
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Asia/Chongqing
 future:      true
-pygments:    true
+#pygments:    true
 markdown:    redcarpet
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
